--- a/package.json
+++ b/package.json
@@ -21,15 +21,10 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@chainlink/contracts": "^0.1.6",
+    "@chainlink/contracts": "^0.1.9",
     "@openzeppelin/contracts": "^3.4.1",
-    "@truffle/hdwallet-provider": "1.2.2",
     "dotenv": "^8.2.0",
     "eth-gas-reporter": "^0.2.22",
-    "nft.storage": "^0.4.0",
-    "opensea-js": "^1.1.11",
-    "truffle-assertions": "^0.9.2",
-    "truffle-flattener": "^1.5.0",
     "web3": "^1.3.4",
     "web3-provider-engine": "^16.0.1",
     "xmlhttprequest": "^1.8.0"
@@ -37,12 +32,17 @@
   "devDependencies": {
     "@chainlink/belt": "^0.0.3",
     "@chainlink/test-helpers": "0.0.5",
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-etherscan": "^2.1.3",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/test-helpers": "^0.5.10",
-    "chai": "^4.3.0",
+    "@truffle/hdwallet-provider": "^1.4.1",
+    "chai": "^4.3.4",
     "depcheck": "^1.3.1",
-    "solhint": "^3.3.2",
-    "truffle": "^5.3.4",
-    "truffle-plugin-verify": "^0.5.7"
+    "ethereum-waffle": "^3.4.0",
+    "ethers": "^5.3.1",
+    "hardhat": "^2.4.1",
+    "solhint": "^3.3.2"
   },
   "resolutions": {
     "**/minimist": "^0.2.1",
