updated .env.example file

--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,15 @@
-VRF_COORDINATOR=""
-LINKTOKEN=""
-KEYHASH=""
+VRF_COORDINATOR=
+LINKTOKEN=
+KEYHASH=
 
-ALCHEMY_KEY=""
-MNEMONIC=""
-ETHERSCAN_API_KEY=""
-OWNER_ADDRESS=""
+ALCHEMY_KEY=
+MNEMONIC=
+SCAN_API_KEY=
+OWNER_ADDRESS=
+ARENA_CONTRACT_ADDRESS=
+NETWORK=
 
-NFT_ADDRESS=""
-ARENA_CONTRACT_ADDRESS=""
+FEE=
 
-KEEPER_ID=""
-
-NETWORK=""
-
-BASIC_NFT_META_DATA=""
-UPGRADE_NFT_META_DATA=""
-
-IPFS_API_KEY=""
-
-PRIVATE_KEY=""
+IPFS_API_KEY=
+PRIVATE_KEY=
